--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,9 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>com.example.parcialfinal/com.example.parcialfinal.App.HelloApplication</mainClass>
+                            <jvmArgs>
+                                <arg>--enable-native-access=javafx.graphics</arg>
+                            </jvmArgs>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
